Move wrapper boilerplate up to abstract strategy, extract error message to a constant, try unbounded virtual thread pool